Revision history for Perl extension AnyEvent::InfluxDB.

{{$NEXT}}

0.13   2016-08-10 22:47:37
    Added full support for InfluxDB v.13

0.02   2016-02-22 00:10:12
    Added full support for InfluxDB v.10

0.01   2015-07-27 00:22:39
	Initial version.
