@@ -143,7 +143,7 @@ my $cv;
     is_deeply(
         [ @retention_policies ],
         [
-            { name => "default", duration => 0, shardGroupDuration => '168h0m0s', replicaN => 1, default => $true },
+            { name => "autogen", duration => 0, shardGroupDuration => '168h0m0s', replicaN => 1, default => $true },
             { name => "last_day", duration => "48h0m0s", shardGroupDuration => '24h0m0s', replicaN => 1, default => $false },
         ],
         "Retention policies listed"
@@ -208,8 +208,8 @@ my $cv;
                     name => 'per5minutes',
                     query => 'CREATE CONTINUOUS QUERY per5minutes ON mydb'
                         .' RESAMPLE EVERY 10s FOR 10m BEGIN'
-                        .' SELECT mean(value) INTO mydb."default".cpu_load_per5m'
-                        .' FROM mydb."default".cpu_load GROUP BY time(5m) END',
+                        .' SELECT mean(value) INTO mydb.autogen.cpu_load_per5m'
+                        .' FROM mydb.autogen.cpu_load GROUP BY time(5m) END',
                 }
             ]
         },
@@ -389,7 +389,7 @@ my $cv;
 
         $db->write(
             database => 'mydb',
-            rp => 'default',
+            rp => 'autogen',
             precision => 's',
             data => [
                     map {
@@ -570,13 +570,21 @@ my $cv;
     my $field_keys = $cv->recv;
     cmp_deeply($field_keys,
         {
-            "cpu_load" => array_each(any(@fields,qw(request value))),
+            "cpu_load" => array_each(
+                {
+                    name => any(@fields, qw(request value)),
+                    type => any(qw(float string))
+                }
+            ),
         },
         "field keys"
     );
     for my $measurement ( sort keys %{ $field_keys } ) {
         note "Measurement: $measurement";
-        note " * $_" for @{ $field_keys->{$measurement} };
+        for my $field ( @{ $field_keys->{$measurement} } ) {
+            note "  Key:  $field->{name}";
+            note "  Type: $field->{type}";
+        }
     }
 }
 {
@@ -639,7 +647,7 @@ my $cv;
             {
                 id => $pos_int,
                 database => any(qw(_internal mydb)),
-                retention_policy => any(qw(monitor default)),
+                retention_policy => any(qw(monitor autogen)),
                 start_time => $dt_re,
                 end_time => $dt_re,
                 expiry_time => $dt_re,
@@ -718,7 +726,7 @@ my $cv;
                     {
                         id => $pos_int,
                         database => 'mydb',
-                        retention_policy => 'default',
+                        retention_policy => 'autogen',
                         shard_group => $pos_int,
                         start_time => $dt_re,
                         end_time => $dt_re,
@@ -741,8 +749,14 @@ my $cv;
 
     $cv = AE::cv;
     $db->create_subscription(
-        q => 'CREATE SUBSCRIPTION alldata ON "mydb"."default"'
-            ." DESTINATIONS ANY 'udp://h1.example.com:9090', 'udp://h2.example.com:9090'",
+        name => q{alldata},
+        database => q{"mydb"},
+        rp => q{"autogen"},
+        mode => "ANY",
+        destinations => [
+            q{'udp://h1.example.com:9090'},
+            q{'udp://h2.example.com:9090'}
+        ],
 
         on_success => sub { $cv->send("test ok") },
         on_error => sub {
@@ -753,8 +767,11 @@ my $cv;
 
     $cv = AE::cv;
     $db->create_subscription(
-        q => 'CREATE SUBSCRIPTION "alldata2" ON "mydb"."default"'
-            ." DESTINATIONS ALL 'udp://h1.example.com:9090'",
+        name => q{"alldata2"},
+        database => q{"mydb"},
+        rp => q{"autogen"},
+        mode => "ALL",
+        destinations => q{'udp://h1.example.com:9090'},
 
         on_success => sub { $cv->send("test ok") },
         on_error => sub {
@@ -765,8 +782,11 @@ my $cv;
 
     $cv = AE::cv;
     $db->create_subscription(
-        q => 'CREATE SUBSCRIPTION "alldata3" ON "foo"."default"'
-            ." DESTINATIONS ALL 'udp://h2.example.com:9090'",
+        name => q{"alldata3"},
+        database => q{"foo"},
+        rp => q{"autogen"},
+        mode => "ALL",
+        destinations => q{'udp://h2.example.com:9090'},
 
         on_success => sub { $cv->send("test ok") },
         on_error => sub {
@@ -796,7 +816,7 @@ my $cv;
                     ],
                     mode => "ALL",
                     name => "alldata3",
-                    retention_policy => "default"
+                    retention_policy => "autogen"
                 }
             ],
             mydb => [
@@ -807,7 +827,7 @@ my $cv;
                     ],
                     mode => "ANY",
                     name => "alldata",
-                    retention_policy => "default"
+                    retention_policy => "autogen"
                 },
                 {
                     destinations => [
@@ -815,7 +835,7 @@ my $cv;
                     ],
                     mode => "ALL",
                     name => "alldata2",
-                    retention_policy => "default"
+                    retention_policy => "autogen"
                 }
             ]
         },
@@ -843,7 +863,7 @@ my $cv;
     while (my ($s, $d) = each %subs) {
         $cv = AE::cv;
         $db->drop_subscription(
-            q => qq{DROP SUBSCRIPTION "$s" ON "$d"."default"},
+            q => qq{DROP SUBSCRIPTION "$s" ON "$d"."autogen"},
 
             on_success => sub { $cv->send("test ok") },
             on_error => sub {
