@@ -1,6 +1,7 @@
 Revision history for Perl extension AnyEvent::InfluxDB.
 
 {{$NEXT}}
+    Added support for InfluxDB v1.0.0 beta
 
 0.13   2016-08-10 22:47:37
     Added full support for InfluxDB v.13
